# sticky

./: LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  window_utils.rs
src/components/: StickyNote.tsx  StickyPad.tsx
